[BDN-748] Add LineItem OpenAPI Spec
