# internal/admin/openapi/openapi.yaml
@@ -591,6 +591,130 @@ paths:
           description: Demand source account deleted successfully
         default:
           $ref: '#/components/responses/ErrorResponse'
+  /line_items:
+    get:
+      operationId: getLineItems
+      summary: List line items
+      tags:
+        - Line items
+      parameters:
+        - name: user_id
+          in: query
+          description: "Filter by user ID"
+          required: false
+          schema:
+            type: integer
+            format: int64
+        - name: app_id
+          in: query
+          description: "Filter by app ID"
+          required: false
+          schema:
+            type: integer
+            format: int64
+        - name: ad_type
+          in: query
+          description: "Filter by ad type"
+          required: false
+          schema:
+            ref$: './schemas/ad-type.schema.json'
+        - name: account_id
+          in: query
+          description: "Filter by account ID"
+          required: false
+          schema:
+            type: integer
+            format: int64
+        - name: account_type
+          in: query
+          description: "Filter by account type"
+          required: false
+          schema:
+            type: string
+        - name: is_bidding
+          in: query
+          description: "Filter by bidding status"
+          required: false
+          schema:
+            type: boolean
+      responses:
+        '200':
+          description: A list of line items
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: './schemas/line-item-detailed.schema.json'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+    post:
+      operationId: createLineItem
+      summary: Create line item
+      tags:
+        - Line items
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './schemas/line-item.schema.json'
+      responses:
+        '201':
+          description: A line item
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/line-item.schema.json'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+  /line_items/{id}:
+    parameters:
+      - $ref: '#/components/parameters/idParam'
+    get:
+      operationId: getLineItem
+      tags:
+        - Line items
+      summary: Get line item
+      responses:
+        '200':
+          description: A line item
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/line-item-detailed.schema.json'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+    patch:
+      operationId: updateLineItem
+      tags:
+        - Line items
+      summary: Update line item
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './schemas/line-item-props.schema.json'
+      responses:
+        '200':
+          description: A line item
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/line-item.schema.json'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+    delete:
+      operationId: deleteLineItem
+      tags:
+        - Line items
+      summary: Delete line item
+      responses:
+        '204':
+          description: Line item deleted successfully
+        default:
+          $ref: '#/components/responses/ErrorResponse'
   /segments:
     get:
       operationId: getSegments
